Small Addition to My First Page.

--- a/site/index.html
+++ b/site/index.html
@@ -6,6 +6,7 @@
     <title>Coursera Test</title>
 </head>
 <body>
-    <h1>Hello! Coursera Test</h1>
+    <h1>Hello Coursera!</h1>
+    <h2>This is a test site for Coursera</h2>
 </body>
 </html>
